--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  text-align: center;
+  min-height: 100vh;
+  background-color: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23222222' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%23444444' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23666666' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%23888888' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%23aaaaaa' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23cccccc' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%23EEE' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App .item-todo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 14px;
+  min-width: 240px;
+  max-width: 250px;
+  margin: 0 auto;
+  text-align: left;
+  margin-top: 15px;
+  background: rgba(19, 71, 82, 1);
+  background: linear-gradient(
+    to bottom left,
+    rgba(19, 71, 82, 1),
+    rgba(65, 235, 220, 1)
+  );
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.App .item-todo .item-text {
+  cursor: pointer;
+}
+
+.App input {
+  padding: 14px 32px 14px 16px;
+  border-radius: 4px 0 0 4px;
+  border: 2px solid rgba(19, 71, 82, 1);
+  outline: none;
+  background: rgba(128, 128, 128, 0.516);
+  color: inherit;
+}
+
+.App input::placeholder {
+  color: white;
+}
+
+.App button {
+  padding: 16px 7px;
+  border: none;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  outline: none;
+  background: rgba(19, 71, 82, 1);
+  background: linear-gradient(
+    to bottom left,
+    rgba(19, 71, 82, 1),
+    rgba(65, 235, 220, 1)
+  );
+  color: inherit;
+  text-transform: capitalize;
+}
+
+.App .item-todo .item-delete {
+  cursor: pointer;
+  font-size: 22px;
+  position: relative;
+}
+
+.item-delete:hover {
+  color: red;
+}
+
+.strike {
+  text-decoration: line-through;
+  color: red;
 }
